--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>minha primeira página</title>
 </head>
 <body>
-  <h1>um pouco sobre mim</h1>  
+<header><h1 id="tituloPrincipal"> Um pouco sobre mim </h1>
+  <h1>Poliane Vitória</h1>
+<p>Sou uma pessoa esforçada <b>Legal</b>Gosto de assistir TV <br>Tenho interesse em fazer curso de estetica
+</p>
+</header>
+<hr width="50%">
+<img id="imagem" src="photo-1433477155337-9aea4e790195.jpeg" alt="nome da imagem">
+
 </body>
-</html>
+</html>.
