--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0>
+    <link rel="stylesheet" href="style.css">
     <title>minha primeira página</title>
-</head>
+    </head>
 <body>
+
 <header><h1 id="tituloPrincipal"> Um pouco sobre mim </h1>
   <h1>Poliane Vitória</h1>
 <p>Sou uma pessoa esforçada <b>Legal</b>Gosto de assistir TV <br>Tenho interesse em fazer curso de estetica
