--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0>
+
     <link rel="stylesheet" href="style.css">
     <title>minha primeira página.</title>
     </head>
@@ -15,6 +16,23 @@
 </header>
 <hr width="50%">
 <img id="imagem" src="photo-1433477155337-9aea4e790195.jpeg" alt="nome da imagem">
+<section id="a">
+    <div class="box"><ol type="I" start="3">
+        <ol>
+        <li>gostos</li>
+        <li>gostos</li>
+        </ol>
+    </div>
+    <div class="box">
+        <ul type="square">
+        <li>metas e objetivos</li>
+        <li>metas e objetivos</li>
+        </ul>
+    </div>
+    </section>
+    <footer>
+        Desenvolvido por: seu nome
+    </footer>
 
 </body>
 </html>
